[IMP]:pms_l10n_es: changes in support_number compute and view, dni support_number will be established if it exists in the partner

--- a/pms_l10n_es/views/pms_checkin_partner_views.xml
+++ b/pms_l10n_es/views/pms_checkin_partner_views.xml
@@ -5,7 +5,7 @@
         <field name="model">pms.checkin.partner</field>
         <field name="inherit_id" ref="pms.pms_checkin_partner_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='state_id']" position="after">
+            <xpath expr="//field[@name='document_expedition_date']" position="after">
                 <field name="support_number" />
             </xpath>
         </field>
