[REF]pms_l10n_es: refactoring of the wizards and tests of the INE and traveler_report

--- a/pms_l10n_es/views/precheckin_portal_templates.xml
+++ b/pms_l10n_es/views/precheckin_portal_templates.xml
@@ -5,13 +5,10 @@
     >
         <xpath expr="//div[@name='document_type_div']" position="replace">
             <div t-attf-class="form-group col-md-4">
-                <label
-                    class="col-form-label"
-                    for="document_type"
-                >Doc. Type</label>
+                <label class="col-form-label" for="document_type">Doc. Type</label>
                 <div class="d-none"><p id="docTypeId"><t
-                    t-esc="checkin_partner_id.document_type"
-                /></p></div>
+                            t-esc="checkin_partner_id.document_type"
+                        /></p></div>
                 <select
                     class="form-control #{error.get('document_type') and 'is-invalid' or ''}"
                     name='document_type'
@@ -37,10 +34,7 @@
         </xpath>
         <xpath expr="//div[@name='document_number_div']" position="replace">
             <div t-attf-class="col-12 col-md-4">
-                <label
-                    class="col-form-label"
-                    for="document_number"
-                >Doc. Number</label>
+                <label class="col-form-label" for="document_number">Doc. Number</label>
                 <input
                     type="text"
                     name="document_number"
@@ -73,17 +67,11 @@
         inherit_id="pms.portal_my_precheckin_end"
     >
         <xpath expr="//div[@name='birthdate_div']" position="before">
-            <div
-                t-attf-class="form-group col-12 col-md-6 font-weight-bold"
-            >
+            <div t-attf-class="form-group col-12 col-md-6 font-weight-bold">
                 Doc. Support Number:
                 <br />
-                <span
-                    class="font-weight-normal ml-3"
-                >
-                    <t
-                        t-esc="checkin_partner.support_number"
-                    />
+                <span class="font-weight-normal ml-3">
+                    <t t-esc="checkin_partner.support_number" />
                 </span>
             </div>
         </xpath>
