--- a/pms/views/account_move_views.xml
+++ b/pms/views/account_move_views.xml
@@ -16,7 +16,9 @@
                     domain="[('company_id','=',company_id)]"
                 />
             </xpath>
-
+            <xpath expr="//field[@name='invoice_user_id']" position="before">
+                <field name="origin_agency_id" />
+            </xpath>
             <xpath expr="//field[@name='quantity']" position="before">
                 <field name="name_changed_by_user" invisible="1" />
                 <field
@@ -33,6 +35,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='company_id']" position="after">
                 <field name="pms_property_id" optional="show" />
+                <field name="origin_agency_id" optional="show" />
             </xpath>
         </field>
     </record>
@@ -50,6 +53,11 @@
                     string="Property"
                     context="{'group_by':'pms_property_id'}"
                 />
+                <filter
+                    name="origin_agency_id"
+                    string="Originating agency"
+                    context="{'group_by':'origin_agency_id'}"
+                />
             </xpath>
         </field>
     </record>
@@ -66,6 +74,11 @@
                     name="by_property"
                     string="Property"
                     context="{'group_by':'pms_property_id'}"
+                />
+                <filter
+                    name="by_origin_agency"
+                    string="Originating agency"
+                    context="{'group_by':'origin_agency_id'}"
                 />
             </xpath>
         </field>
